# metallb-dyn6

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.multiarch  Justfile  Makefile.toml  README.md
.github/: chart-releaser.yaml  dependabot.yml  release-drafter-chart.yml  release-drafter.yml  renovate.json  renovate.json5
.github/workflows/: ci.yml  prepare-chart-release.yml  prepare-release.yml  publish.yml  version-maintenance.yml
app/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  ranges.rs  subnet_override.rs
crates/k8s/: Cargo.toml
crates/k8s/src/: lib.rs  ranges.rs  updater.rs
crates/k8s/src/v1beta1/: mod.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs  my_ip.rs
helm/charts/metallb-dyn6/: .frigate  .helmignore  Chart.yaml  Makefile  README.md  values.yaml
helm/charts/metallb-dyn6/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  rolebinding.yaml  serviceaccount.yaml
helm/util/: requirements.txt  set_chart_version.py  version_from_cargo.py
k8s/: Cargo.toml
k8s/src/: lib.rs
k8s/src/v1beta1/: ipaddresspool.rs  mod.rs
metallb/: Cargo.toml
metallb-dyn6/: Cargo.toml
metallb-dyn6/src/: cli.rs  main.rs  subnet_override.rs
sources/address_source/: Cargo.toml
sources/address_source/src/: lib.rs
sources/interface/: Cargo.toml
sources/interface/src/: lib.rs  v6_unicast.rs
sources/my_ip/: Cargo.toml
sources/my_ip/src/: lib.rs
sources/prefix_source/: Cargo.toml
sources/prefix_source/src/: lib.rs
types/: Cargo.toml
types/src/: ranges.rs
