[package]
name = "k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
jsonschema = "0.17.1"
k8s-openapi = { version = "0.19.0", features = ["v1_27", "schemars"] }
kube = { version = "0.85.0", features = ["runtime", "derive"] }
schemars = "0.8.12"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tracing = { version = "0.1.37" }
# Other local crates
types = { path = "../types" }
