[package]
name = "metallb-dyn6"
version = "0.1.1"
edition = "2021"
description = "Main metallb-dyn6 application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive", "env", "string", "unicode"] }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
metallb-dyn6-sources = { path = "../sources" }
metallb-dyn6-k8s = { path = "../k8s" }
ipnet = "2.8.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing = "0.1.37"
# Set the exact k8s API version to use
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
