[package]
name = "metallb-dyn6-k8s"
version = "0.1.2"
edition = "2021"
description = "Manages k8s API access for updating MetalLB resources"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
ipnet = "2.9.0"
jsonschema = "0.17.1"
# do not specify a specific k8s api version in the lib crate,
# this should be done in the bin crate
# https://kube.rs/upgrading/#renovate
k8s-openapi = { version = "0.20.0", features = ["schemars"] }
kube = { version = "0.86.0", default-features = false, features = [
    "client",
    "rustls-tls",
    "runtime",
    "derive",
    "config",
    "kube-derive",
    "kube-runtime",
] }
schemars = "0.8.15"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tracing = { version = "0.1.40" }

[dev-dependencies]
# we do enable a specific version for dev, so that tests can run
k8s-openapi = { version = "0.20.0", features = ["schemars", "v1_27"] }
