[package]
name = "metallb-dyn6-k8s"
version = "0.1.2"
edition = "2021"
description = "Manages k8s API access for updating MetalLB resources"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.11.0"
ipnet = "2.9.0"
jsonschema = "0.30.0"
# do not specify a specific k8s api version in the lib crate,
# this should be done in the bin crate
# https://kube.rs/upgrading/#renovate
k8s-openapi = { version = "0.24.0", features = ["schemars"] }
kube = { version = "1.0.0", default-features = false, features = [
    "client",
    "rustls-tls",
    "runtime",
    "derive",
    "config",
    "kube-derive",
    "kube-runtime",
] }
schemars = "0.8.17"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tracing = { version = "0.1.40" }

[dev-dependencies]
# we do enable a specific version for dev, so that tests can run
k8s-openapi = { version = "0.24.0", features = ["schemars", "v1_28"] }
