[package]
name = "metallb-dyn6-sources"
version = "0.1.1"
edition = "2021"
description = "Sources for retrieving a dynamic Ipv6 prefix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
ipnet = "2.8.0"
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
