[package]
name = "metallb-dyn6-sources"
version = "0.1.2"
edition = "2021"
description = "Sources for retrieving a dynamic Ipv6 prefix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
ipnet = "2.9.0"
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.50"
