[package]
name = "metallb-dyn6-sources"
version = "0.1.2"
edition = "2021"
description = "Sources for retrieving a dynamic Ipv6 prefix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
ipnet = "2.9.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "2.0.0"
