[package]
name = "my_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prefix_source = { path = "../prefix_source" }
ipnet = "2.8.0"
reqwest = { version = "0.11.20", features = [
    "rustls-tls",
    "json",
    "rustls",
    "serde_json",
    "blocking",
] }
serde = { version = "1.0.186", features = ["derive"] }
async-trait = "0.1.73"
